kubernetes/yamls/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexa
  namespace: alexa
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: alexa
