kubernetes/yamls/application/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alexa
  namespace: alexa
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: susi-alexa.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: alexa
          servicePort: 80
